--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -669,10 +669,17 @@ This outcome is presented in \cref{tab:random_forest_big_experiment_best_feature
 
 
 The top features list shows us the importance of mobility diameter in both cases.
-Where for weeknights and for the whole week, the user's mobility is  relevant to detect his past endemic condition. The same happens with the amount of
-the prediction of the target. other time periods this the vulnerability condition in
+Where for weeknights and for the whole week, the user's mobility is  relevant to detect his past endemic condition.
+As expected, in both cases we see that there are a number of features logging vulnerable interactions of users living in non-endemic regions.
+This is in line with what we hypothesized in the construction of the risk maps in \cref{section:riskmaps}.
+The direction of the call and the calls' duration or number of occurrences are both important predictors of this model.
+Given that this best feature methodology is an heuristic, there doesn't seem to be any clear indication over which type of CDR interaction has better predictive power.
+Yet there is a preference for interactions logged in the earlier months, August and September,
+This might be the case where the algorithm is picking up on the most recent migrations, given that our time period of analysis $T_1$ starts in August.
 
-% Still, the results are very relevant in answering the question of long-term migrations. High roc-auc and f1 scores for the first expriment prove that there is value in CDR data to predict long-term migrations between two regions.
+The analysis here presented is relevant in answering the question of long-term migrations.
+High scores for these experiments show that there is value in CDR data to predict long-term migrations between two regions.
+Also, top features are in line with the assumptions on which the risk maps were constructed.
 
 
 
@@ -991,8 +998,6 @@ The first idea to reduce the overall variance of the algorithm is to subsample t
 The other heuristic is considered to be more important, at least experimentally by~\textcite{hastie-elemstatslearn}. This is done by successively applying a \textit{shrinkage} factor $v \in (0,1)$ to the new model. At step $t$, instead of letting the overall model become $ \hat{y_i}^{(t)} = \hat{y_i}^{(t-1)} + \theta_t h_t(x_i) $, we multiply the shrinkage factor $v$ to these values before adding them to the overall model at step $t-1$. In the literature this shrinkage factor is also called the \textit{learning rate} of the algorithm. Note that $v$ is reducing the movement of the algorithm in the direction of optimization provided by $\theta_t$ and $h_t$. In practice, this results in longer iterations needed to reach the algorithm's \textit{best} prediction rate. However, when this factor is combined with sub sampling, it has been empirically shown to improve the overall generalization accuracy.
 
 
- \todo{show comparisons between using subsamples and without in 1 of the best problems of Adaboost or RF}
-
 %\textbf{TODO A desarrollar}
 %Python, sklearn, pandas, graphlab, etc
 %
@@ -1003,3 +1008,120 @@ The other heuristic is considered to be more important, at least experimentally 
 %In general, algorithms will load all data in RAM and execute optimization routines. If K Folds is used, some implementations will run learning routines simultaneously in each fold group and keep the "best" scores at the end.
 %
 %Joblib, sklearn and Graphlab are all Python modules
+
+
+\subsection{Experiments}\label{subsection:boosting_experiments}
+
+\todo{Do rewording for whole gradient boosting experiment section.}
+
+In this subsection, we explore on the task described on \cref{target4} with Gradient Boosting classifiers.
+This is done in comparison with the results outlined in \label{subsection:random_forest_experiments}.
+Again, we perform a cross validation procedure over the available hyperparamters of this model which are, for the most part, the same as in the Random Forests classifiers.
+The
+
+\begin{itemize}\label{list:random_forest_grid_search_params}
+
+  \item The tree's maximum depth
+  \item If we pre weighted the positive and negative classes in the loss function
+  \item The maximum number of trees to grow
+  \item The splitting criterion at each node
+  \item The fraction of features available to use at each split
+  \item The minimum number of splits
+  \item The scoring function used to evaluate the learner
+  \item The minimum loss reduction needed to allow a split
+
+\end{itemize}
+
+
+The full experiment ran two different tasks, where each was characterized by the attributes used for our $X$ dataset.
+In the first one, the procedure ran with all available features and in the second one we separated the features that had a high correlation, bigger than $0.3$, with the target variable.
+This means we removed all of the features that counted the user\'s vulnerable neighbors for a given month, segmented by the direction of the call.\footnote{For a complete description on the definition of these features, please refer to \cref{tab:data_example}.}
+Recall that all of these features were central in the construction of the risk maps in \cref{section:riskmaps}.
+The color of each antenna's circle represented the amount of vulnerable users, for that given month, when looking at the incoming or outgoing calls.
+Then, these feature's correlation to the target variable are indicative, up-to a certain point, of the predictive power of them.
+
+For this experimentation, we recorded the outcome of the cross validation procedures in terms of different scoring metrics, the runtime, the hyperparameters chosen and the top ten best features as given by the algorithm. The summary of these results is given in \cref{tab:random_forest_big_experiment_results}.
+
+\begin{table}[!htb]
+\caption{Table of best results comparing two 5-fold full grid cross validation procedures on a Random Forest Classifier.  The metrics and runtime for both experiments are shown.}
+\label{tab:random_forest_big_experiment_results}
+\centering
+\begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill} }  l l l l l }
+%{|p{2cm}|p{2cm}|p{1.5cm}|p{1cm}|p{1.5cm}}
+\toprule
+Result & Experiment 1 & Experiment 2 \\
+\midrule
+CV $F1$ score           & 0.770  &  0.663 \\
+CV $Accuracy$ score    & 0.848 &  0.843 \\
+CV $Precision$ score    & 0.788 &  0.780 \\
+CV $Recall$ score       & 0.753 &  0.557 \\
+CV $Logloss$ score     & 0.391 &  0.337 \\
+CV $ROC AUC$ score     & 0.903 & 0.880  \\
+Maximum tree depth     & 12 &  12 \\
+Number of trees          & 150 &  200 \\
+Balanced Classes        & True & True  \\
+Split Criterion          & Gini &  Gini \\
+Minimum loss reduction  & 10 &  1 \\
+Running time (s)        & 2030 &  2064 \\
+Features sample in a split (\%) & 50 & 80  \\
+
+\bottomrule
+\end{tabular*}
+\end{table}
+
+
+From the result's table, it's relevant to note that both optimal learners chose the Gini splitting criterion as best, with tree's of a relatively high depth with 12 levels.
+A similar situation happened with the number of trees grown; best configurations had more than 100 trees with the second experiment having an optimal number of 200.
+
+Bigger differences appear in the choice of the minimum loss reduction and the features sampled per split.
+There are no clear indications as to which configuration is better.
+And, whilst having a higher level of randomization in the growth of the trees hints to a less overfitting learner, this difference is not that notable in the CV scorings.
+
+For most of the metrics used to evaluate the cross validation procedure, the scores look very similar. It is notable that the second experiment is slightly better in the accuracy, precision, logloss and ROC AUC scores, with a maximum difference of 5\% for all of them.
+Yet at the same time the second experiment's performance drastically drops for the recall and, because of this, for the $F1$ measure.
+This means that the learner is losing performance in correctly tagging the user's who have migrated from the endemic region.
+This 15\% difference hints to how much of an impact is characterized by removing the features for the second experiment.
+We can suspect that there's enough missing information in those features to reduce the predictive power of the learner.
+
+In both experiments, its important to note though that the elected hyperparameters are not optimal in any strict sense.
+At most, they can hint to the best possible configuration.
+Given the large combinatorial nature of this process, there is no guarantee of optimality in this search.
+To a greater degree were only covering as much space as our time and our computational systems allow.
+
+
+We also recorded the model's selection of best features, using the explanation outlined in \cref{subsection:random_forests_other_notes}.
+This outcome is presented in \cref{tab:random_forest_big_experiment_best_features}, where the top 10 features for each experiment are shown.
+
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{@{}llll@{}}
+            \toprule
+            & \multicolumn{3}{l}{Top Features}                                                                   \\ \midrule
+            \multicolumn{1}{l|}{\multirow{4}{*}{First Experiment}}  & Call Count Antenna\_0           & Mobility Diameter               & Mobility Diameter Weeknight    \\
+            \multicolumn{1}{l|}{}                                   & Call Count Weeknight Antenna\_0 & TimeWeekDay Out Month\_09       & CallsWeekDay In Vuln Month\_08 \\
+            \multicolumn{1}{l|}{}                                   & TimeWeekDay Out Month\_08       & State Hidalgo                   & CallsWeekDay In Month\_08      \\
+            \multicolumn{1}{l|}{}                                   &                                 & TimeWeekDay Out Month\_12       &                                \\ \midrule
+            \multicolumn{1}{l|}{\multirow{4}{*}{Second Experiment}} & Mobility Diameter               & Call Count Antenna\_0           & Mobility Diameter Weeknight    \\
+            \multicolumn{1}{l|}{}                                   & Call Count Antenna\_1           & Call Count Weeknight Antenna\_0 & TimeWeekDay Out Month\_12      \\
+            \multicolumn{1}{l|}{}                                   & TimeWeekDay In Vuln Month\_09   & TimeWeekDay Out Vuln Month\_08  & TimeWeekDay Out Month\_09      \\
+            \multicolumn{1}{l|}{}                                   &                                 & TimeWeekDay In Vuln Month\_08   &                                \\ \midrule
+        \end{tabular}%
+    }
+    \caption{A representation of the top features that resulted from the Random Forest experiment on target4. }\label{tab:random_forest_big_experiment_best_features}
+\end{table}
+
+
+The top features list shows us the importance of mobility diameter in both cases.
+Where for weeknights and for the whole week, the user's mobility is  relevant to detect his past endemic condition.
+As expected, in both cases we see that there are a number of features logging vulnerable interactions of users living in non-endemic regions.
+This is in line with what we hypothesized in the construction of the risk maps in \cref{section:riskmaps}.
+The direction of the call and the calls' duration or number of occurrences are both important predictors of this model.
+Given that this best feature methodology is an heuristic, there doesn't seem to be any clear indication over which type of CDR interaction has better predictive power.
+Yet there is a preference for interactions logged in the earlier months, August and September,
+This might be the case where the algorithm is picking up on the most recent migrations, given that our time period of analysis $T_1$ starts in August.
+
+The analysis here presented is relevant in answering the question of long-term migrations.
+High scores for these experiments show that there is value in CDR data to predict long-term migrations between two regions.
+Also, top features are in line with the assumptions on which the risk maps were constructed.
+
