--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -1011,7 +1011,6 @@ The other heuristic is considered to be more important, at least experimentally 
 
 \subsection{Experiments}\label{subsection:boosting_experiments}
 
-\todo{Do rewording for whole gradient boosting experiment section.}
 
 In this subsection, we explore on the task described in \cref{target4}, using Gradient Boosting classifiers.
 The outcomes are compared with the results outlined in \cref{subsection:random_forest_experiments}.
@@ -1067,13 +1066,14 @@ min\_leaf\_weight  & 2 &  5 &  10 \\
 min\_loss  & 10 &  1 &  0.01 \\
 step\_size  & 0.01 &  0.1 &  1 \\
 
-
 \bottomrule
 \end{tabular*}
 \end{table}
 
 The first notable fact from the results is how fast the last procedure is, compared to the two before.
-This should not be surprising as we have limited the amount of available features to use, thus decreasing the necessary computer resources to compute the fit.
+It trained much faster, with almost 3 minutes to complete the full procedure whilst the others had at minimum 15 minutes to do so.
+We see that the information from the top 30 features of the RF models was efficiently used in this boosting experiment.
+This runtime improvement then should not be surprising as we have limited the amount of available features to use, thus decreasing the necessary computer resources to compute the fit.
 % However, this conclusion might seem
 
 The second interesting fact from the outcome is that the model seems to be more overfit, when compared to the experiments of the random forest.
@@ -1092,36 +1092,14 @@ Still, this value was from the first experiment with Random Forests, where the c
 On the other hand, the third model lacked the same strength for the $ROC AUC$ score.
 Here, the first model reached a score of almost 90\%, whereas the third model had a poorer performance of 83\%.
 Still, the lowest value for all experiments is more than satisfactory for the prediction task.
+With these results, and due to the difference in $ROC$ vs. $F1$ scores, there is no clear indication as to which configuration is better across all experiments.
+
+\todo{Do rewording for whole gradient boosting experiment section.}
 
 
-sometimes better precision
-Chose the non-balanced class.
 
-Last model had much better F1 score, comparable to random forest model and trained blazingly fast.
-The information in the top 30 features of the RF models was efficiently used in the boosting. It had lots of accuracy, recall, etc.
-Notable difference among hyperparameters elected. The values chosen are those in favor of a less overfit model
-
-with tree's of a relatively high depth with 12 levels.
-A similar situation happened with the number of trees grown; best configurations had more than 100 trees with the second experiment having an optimal number of 200.
-
-Bigger differences appear in the choice of the minimum loss reduction and the features sampled per split.
-There are no clear indications as to which configuration is better.
-And, whilst having a higher level of randomization in the growth of the trees hints to a less overfitting learner, this difference is not that notable in the CV scorings.
-
-For most of the metrics used to evaluate the cross validation procedure, the scores look very similar. It is notable that the second experiment is slightly better in the accuracy, precision, logloss and ROC AUC scores, with a maximum difference of 5\% for all of them.
-Yet at the same time the second experiment's performance drastically drops for the recall and, because of this, for the $F1$ measure.
-This means that the learner is losing performance in correctly tagging the user's who have migrated from the endemic region.
-This 15\% difference hints to how much of an impact is characterized by removing the features for the second experiment.
-We can suspect that there's enough missing information in those features to reduce the predictive power of the learner.
-
-In both experiments, its important to note though that the elected hyperparameters are not optimal in any strict sense.
-At most, they can hint to the best possible configuration.
-Given the large combinatorial nature of this process, there is no guarantee of optimality in this search.
-To a greater degree were only covering as much space as our time and our computational systems allow.
-
-
-The model's selection of best features, but only for the first two experiments. Since the last one has the same
-
+The model's selection of best features, but only for the experiments.
+Note that the last selection will have a very similar configuration to the top Random Forest features, since it selects 10 features of the available 30 used to train the model.
 This outcome is presented in \cref{tab:boosting_big_experiment_best_features}, where the top 10 features for each experiment are shown.
 
 
@@ -1166,8 +1144,7 @@ Once again, we see there are more features of earlier month interactions, such a
 At the same time, the only other month appearing is December.
 This could be indicative of familiar relations as it is a month which coincides with festivities and family reunions.
 
-The analysis here presented is relevant in answering the question of long-term migrations.
-High scores for these experiments show that there is value in CDR data to predict long-term migrations between two regions.
-Also, top features are in line with the assumptions on which the risk maps were constructed.
-Top features are related to the vulnerability and to the users mobility
-
+The analysis here confirms the relevance of CDR information in giving predictive information of long-term migrations.
+Once again, experiments results in satisfactory scores across different metrics and for a highly imbalanced class.
+Top features here selected expose the importance of the vulnerability condition of the users and of their calling patterns.
+Also, their mobility carries information enough to discriminate between the positive and negative samples.
